zmiana index.html

--- a/wrz.13/index.html
+++ b/wrz.13/index.html
@@ -10,6 +10,12 @@
 </body>
 <script>
     // alert("witaj");
-    confirm("Czy jesteś pewien?");
+    // confirm("Czy jesteś pewien?");
+    // alert(confirm("Czy jesteś pewien?"));
+    // var userName = prompt("Podaj imie","");
+    // alert("witaj "+userName);
+    // false?alert("tak"):alert("nie");
+    // if (true)alert("tak");
+    // else alert("nie");
 </script>
 </html>
