zmiana index.html

--- a/wrz.13/index.html
+++ b/wrz.13/index.html
@@ -12,8 +12,9 @@
     // alert("witaj");
     // confirm("Czy jesteś pewien?");
     // alert(confirm("Czy jesteś pewien?"));
-    // var userName = prompt("Podaj imie","");
-    // alert("witaj "+userName);
+    var userName = prompt("Podaj imie","");
+    var userName2 = prompt("Podaj nazwiski","");
+    alert("witaj "+userName+" "+userName2);
     // false?alert("tak"):alert("nie");
     // if (true)alert("tak");
     // else alert("nie");
