zmiana index.html

--- a/wrz.13/index.html
+++ b/wrz.13/index.html
@@ -12,11 +12,11 @@
     // alert("witaj");
     // confirm("Czy jesteś pewien?");
     // alert(confirm("Czy jesteś pewien?"));
-    var userName = prompt("Podaj imie","");
-    var userName2 = prompt("Podaj nazwiski","");
-    alert("witaj "+userName+" "+userName2);
-    // false?alert("tak"):alert("nie");
-    // if (true)alert("tak");
-    // else alert("nie");
+    // var userName = prompt("Podaj imie","");
+    // var userName2 = prompt("Podaj nazwiski","");
+    // alert("witaj "+userName+" "+userName2);
+    // var a = prompt("Podaj 1 liczbe","");
+    // var b = prompt("Podaj 2 liczbe","");
+    // alert("suma to: "+(a-+-b));
 </script>
 </html>
