--- a/wrz.13/index.html
+++ b/wrz.13/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pierwsza lekcja JS</title>
-<script>
-    function test()
-    {
-        alert("Witaj");
-    }
-</script>
+    
+<script src="script.js"></script>
 </head>
 <body>
     <input type="button" value="kilknij" onclick="test()">
