--- a/lis.08/zadanie2/index.htm
+++ b/lis.08/zadanie2/index.htm
@@ -15,6 +15,15 @@
     <input type="button" value="Wyślij" onclick="funkcja()">
 </fieldset>
 
+<fieldset>
+    <legend>Na co masz ochotę ? :</legend>
+    <input type="checkbox" name="ciastka" value="biszkopty">biszkopty
+    <input type="checkbox" name="ciastka" value="herbatniki">herbatniki
+    <input type="checkbox" name="ciastka" value="ciastka czekoladowe">ciastka czekoladowe
+    <input type="checkbox" name="ciastka" value="piernik">piernik
+    <br>
+    <input type="button" value="Wyślij" onclick="funkcja2()">
+</fieldset>
 <script src="script.js"></script>
 </body>
 </html>
