dodanie select, option

--- a/lis.08/zadanie2/index.htm
+++ b/lis.08/zadanie2/index.htm
@@ -24,6 +24,18 @@
     <br>
     <input type="button" value="Wyślij" onclick="funkcja2()">
 </fieldset>
+
+<fieldset>
+    <legend>Wybierz ssaki:</legend>
+    <select name="ssaki" id="ssaki">
+    <option value="kot">kot</option>
+    <option value="jeż">jeż</option>
+    <option value="ryś">ryś</option>
+    <option value="koń">koń</option>
+    </select>
+    <br>
+    <input type="button" value="Wyślij" onclick="funkcja3()">
+</fieldset>
 <script src="script.js"></script>
 </body>
 </html>
