--- a/gra-w-zycie/index.html
+++ b/gra-w-zycie/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <center>
-        <h1>Gra w Życie</h1>
+        <h1>Gra w Życie Conwaya</h1>
+        <b>stworzone dzięki jQuery</b>
         <div id="board"></div>
         <button type="button">Start</button> <button type="button">Stop</button> <button type="button" id="bt-clear">Wyczyść</button>
         <br><br>
