--- a/gra-w-zycie/index.html
+++ b/gra-w-zycie/index.html
@@ -13,14 +13,10 @@
         <h2>Gra w Życie Conwaya</h2>
         <b>stworzone dzięki jQuery</b>
         <div id="board"></div>
-        <button type="button">Start</button> <button type="button">Stop</button> <button type="button" id="bt-clear">Wyczyść</button>
-        <br><br>
-        <select>
-            <option value="s">mała</option>
-            <option value="m" selected="selected">średnia</option>
-            <option value="l">duża</option>
-        </select>
-        <button>Zmiań rozmiar planszy</button>
+        <button type="button" id="bt-start/stop">Zacznij symulacje</button>
+        <button type="button" id="bt-one">Jedna klatka</button><br>
+        <button type="button" id="bt-restore">Przywróć </button>
+        <button type="button" id="bt-clear">Wyczyść</button>
     <script src="script.js"></script>
 </body>
 </html>
