--- a/gra-w-zycie/index.html
+++ b/gra-w-zycie/index.html
@@ -13,7 +13,8 @@
         <h2>Gra w Życie Conwaya</h2>
         <b>stworzone dzięki jQuery</b>
         <div id="board"></div>
-        <button type="button" id="bt-start/stop">Zacznij symulacje</button>
+        <button type="button" id="bt-onOff">Zacznij symulacje</button>
+        <input  type="range" id="input-speed"> 
         <button type="button" id="bt-one">Jedna klatka</button><br>
         <button type="button" id="bt-restore">Przywróć </button>
         <button type="button" id="bt-clear">Wyczyść</button>
