"Dodanie" css i poprawa kilku błędów

--- a/gra-w-zycie/index.html
+++ b/gra-w-zycie/index.html
@@ -9,14 +9,14 @@
     <script src="jquery-3.7.1.min.js"></script>
 </head>
 <body>
-    <center>
-        <h2>Gra w Życie Conwaya</h2>
-        <b>stworzone dzięki jQuery</b>
-        <div id="board"></div>
+    <h2>Gra w Życie Conwaya</h2>
+    <h4>stworzone dzięki jQuery</h4>
+    <div id="board"></div>
         <button type="button" id="bt-onOff">Zacznij symulacje</button>
-        <input  type="range" id="input-speed"> 
-        <button type="button" id="bt-one">Jedna klatka</button><br>
-        <button type="button" id="bt-restore">Przywróć </button>
+        <button type="button" id="bt-speed">Prędkość: średnio (0.5s)</button>
+        <button type="button" id="bt-restore">Przywróć</button>
+        <br>
+        <button type="button" id="bt-one">Jedna klatka</button>
         <button type="button" id="bt-clear">Wyczyść</button>
     <script src="script.js"></script>
 </body>
