--- a/gra-w-zycie/index.html
+++ b/gra-w-zycie/index.html
@@ -14,9 +14,9 @@
     <div id="board"></div>
         <button type="button" id="bt-onOff">Zacznij symulacje</button>
         <button type="button" id="bt-speed">Prędkość: średnio (0.5s)</button>
-        <button type="button" id="bt-restore">Przywróć</button>
-        <br>
         <button type="button" id="bt-one">Jedna klatka</button>
+        <br>
+        <button type="button" id="bt-restore" disabled="disabled">Przywróć</button>
         <button type="button" id="bt-clear">Wyczyść</button>
     <script src="script.js"></script>
 </body>
