--- a/2024.10.17/kontakt.html
+++ b/2024.10.17/kontakt.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Firma IT</title>
+    <link rel="stylesheet" href="styl.css">
+    <link rel="shortcut icon" href="it.png" type="image/x-icon">
 </head>
 <body>
-    
+    <div id="kontener">
+        <header>
+            <div id="logo" style="display: inline-block;">
+                <img src="it.png" alt="firma it"> 
+            </div>
+            <div id="links" style="display: inline-block;">
+                <a href="index.html">Strona główna</a>
+                <a href="uslugi.html">Usługi</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
+        </header>
+    <div id="baner">
+        <img src="animacja.gif" alt="Usługi informatyczne">
+    </div>
+    <article>
+        <table>
+            <tr>
+                <td>Imię: </td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>Nazwisko: </td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>E-mail:</td>
+                <td><input type="email"></td>
+            </tr>
+            <tr>
+                <td>Zgłoszenie </td>
+                <td><textarea name="" id="" cols="40" rows="10"></textarea></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="checkbox" name="regulamin" id="regulamin"><label for="regulamin">Zapoznałam/em się z regulaminem</label></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><button type="button">Resetuj</button><button type="button">Prześlij</button></td>
+            </tr>
+        </table>
+        <hr>
+    </article>
+    <footer>Autor strony: Ja</footer>
+</div>
 </body>
 </html>
