--- a/2024.10.17/index.html
+++ b/2024.10.17/index.html
@@ -8,18 +8,26 @@
     <link rel="shortcut icon" href="it.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <img src="it.png" alt="firma it"> 
-        <div id="links">
-            <a href="index.html">Strona główna</a>
-            <a href="uslugi.html">Usługi</a>
-            <a href="kontakt.html">Kontakt</a>
-        </div>
-    </header>
+    <div id="kontener">
+        <header>
+            <div id="logo" style="display: inline-block;">
+                <img src="it.png" alt="firma it"> 
+            </div>
+            <div id="links" style="display: inline-block;">
+                <a href="index.html">Strona główna</a>
+                <a href="uslugi.html">Usługi</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
+        </header>
     <div id="baner">
         <img src="animacja.gif" alt="Usługi informatyczne">
     </div>
-    <article></article>
+    <article>
+        <h2>Firma IT</h2>
+        <p>Jesteśmy firmą z wieloletnim doświadczeniem w zakresie IT.</p>
+        <hr>
+    </article>
     <footer>Autor strony: Ja</footer>
+</div>
 </body>
 </html>
