--- a/2024.10.17/uslugi.html
+++ b/2024.10.17/uslugi.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Firma IT</title>
+    <link rel="stylesheet" href="styl.css">
+    <link rel="shortcut icon" href="it.png" type="image/x-icon">
 </head>
 <body>
-    
+    <div id="kontener">
+        <header>
+            <div id="logo" style="display: inline-block;">
+                <img src="it.png" alt="firma it"> 
+            </div>
+            <div id="links" style="display: inline-block;">
+                <a href="index.html">Strona główna</a>
+                <a href="uslugi.html">Usługi</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
+        </header>
+    <div id="baner">
+        <img src="animacja.gif" alt="Usługi informatyczne">
+    </div>
+    <article>
+        <h2>Oferta</h2>
+        <ol>
+            <li>Outsourcing IT</li>
+            <li>Konfiguracja komputerów</li>
+            <li>Sprzęt komputerowy</li> 
+            <li>Strony internetowe</li>
+        </ol>
+        <hr>
+    </article>
+    <footer>Autor strony: Ja</footer>
+</div>
 </body>
 </html>
