--- a/2024.10.17/index.html
+++ b/2024.10.17/index.html
@@ -10,13 +10,13 @@
 <body>
     <div id="kontener">
         <header>
-            <div id="logo" style="display: inline-block;">
+            <div id="logo">
                 <img src="it.png" alt="firma it"> 
             </div>
-            <div id="links" style="display: inline-block;">
-                <a href="index.html">Strona główna</a>
-                <a href="uslugi.html">Usługi</a>
-                <a href="kontakt.html">Kontakt</a>
+            <div id="links">
+                <a class="a" href="index.html">Strona główna</a>
+                <a class="a" href="uslugi.html">Usługi</a>
+                <a class="a" href="kontakt.html">Kontakt</a>
             </div>
         </header>
     <div id="baner">
@@ -27,7 +27,7 @@
         <p>Jesteśmy firmą z wieloletnim doświadczeniem w zakresie IT.</p>
         <hr>
     </article>
-    <footer>Autor strony: Ja</footer>
+    <footer>Autor strony: <strong>Ja</strong></footer>
 </div>
 </body>
 </html>
