--- a/2024.10.17/uslugi.html
+++ b/2024.10.17/uslugi.html
@@ -10,10 +10,10 @@
 <body>
     <div id="kontener">
         <header>
-            <div id="logo" style="display: inline-block;">
+            <div id="logo">
                 <img src="it.png" alt="firma it"> 
             </div>
-            <div id="links" style="display: inline-block;">
+            <div id="links">
                 <a href="index.html">Strona główna</a>
                 <a href="uslugi.html">Usługi</a>
                 <a href="kontakt.html">Kontakt</a>
@@ -32,7 +32,7 @@
         </ol>
         <hr>
     </article>
-    <footer>Autor strony: Ja</footer>
+    <footer>Autor strony: <strong>Ja</strong></footer>
 </div>
 </body>
 </html>
